2011-01-18  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/47216
	* emit-rtl.c: Include tree-flow.h.
	(set_mem_attributes_minus_bitpos): Use tree_could_trap_p instead
	of replicating it with different semantics.
	* Makefile.in (emit-rtl.o): Adjust.

2011-01-18  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

        * config/arm/cortex-a9.md (cortex-a9-neon.md): Actually
        include.
        (cortex_a9_dp): Handle neon types correctly.

2011-01-18  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/47299
	* expr.c (expand_expr_real_2) <case WIDEN_MULT_EXPR>: Don't use
	subtarget.  Use normal multiplication if both operands are
	constants.
	* expmed.c (expand_widening_mult): Don't try to optimize constant
	multiplication if op0 has VOIDmode.  Convert op1 constant to mode
	before using it.

2011-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/lto.texi (LTO): Ensure two spaces after period.  Fix
	spacing after 'e.g.', typos, comma, hyphenation.

2011-01-17  Richard Henderson  <rth@redhat.com>

	* config/rx/predicates.md (rx_constshift_operand): Use match_test.
	(rx_restricted_mem_operand): New.
	(rx_shift_operand): Use register_operand.
	(rx_source_operand, rx_compare_operand): Likewise.
	* config/rx/rx.md (addsi3_flags): New expander.
	(adddi3): Rewrite as expander.
	(adc_internal, *adc_flags, adddi3_internal): New patterns.
	(subsi3_flags): New expander.
	(subdi3): Rewrite as expander.
	(sbb_internal, *sbb_flags, subdi3_internal): New patterns.

	* config/rx/rx.c (RX_BUILTIN_SAT): Remove.
	(rx_init_builtins): Remove sat builtin.
	(rx_expand_builtin): Likewise.
	* config/rx/rx.md (ssaddsi3): New.
	(*sat): Rename from sat.  Represent the CC_REG input.

	* config/rx/predicates.md (rshift_operator): New.
	* config/rx/rx.c (rx_expand_insv): Remove.
	* config/rx/rx-protos.h: Update.
	* config/rx/rx.md (*bitset): Rename from bitset.  Swap the ashift
	operand to the canonical position.